// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TinyMceWidget snapshots ImageUploadModal is not rendered 1`] = `
<[object Object]
  value={
    {
      "store": {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(Symbol.observable): [Function],
      },
      "subscription": {
        "addNestedSub": [Function],
        "getListeners": [Function],
        "handleChangeWrapper": [Function],
        "isSubscribed": [Function],
        "notifyNestedSubs": [Function],
        "trySubscribe": [Function],
        "tryUnsubscribe": [Function],
      },
    }
  }
>
  <TinyMceWidget
    disabled={false}
    editorRef={
      {
        "current": {
          "value": "something",
        },
      }
    }
    editorType="text"
    enableImageUpload={false}
    id="sOMeiD"
    images={
      {
        "sOmEaSsET": {
          "staTICUrl": "/assets/sOmEaSsET",
        },
      }
    }
    isLibrary={false}
    learningContextId="course+org+run"
    lmsEndpointUrl="sOmEvaLue.cOm"
    onChange={[Function]}
    studioEndpointUrl="sOmEoThERvaLue.cOm"
    updateContent={[Function]}
  />
</[object Object]>
`;

exports[`TinyMceWidget snapshots SourcecodeModal is not rendered 1`] = `
<[object Object]
  value={
    {
      "store": {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(Symbol.observable): [Function],
      },
      "subscription": {
        "addNestedSub": [Function],
        "getListeners": [Function],
        "handleChangeWrapper": [Function],
        "isSubscribed": [Function],
        "notifyNestedSubs": [Function],
        "trySubscribe": [Function],
        "tryUnsubscribe": [Function],
      },
    }
  }
>
  <TinyMceWidget
    disabled={false}
    editorRef={
      {
        "current": {
          "value": "something",
        },
      }
    }
    editorType="problem"
    enableImageUpload={true}
    id="sOMeiD"
    images={
      {
        "sOmEaSsET": {
          "staTICUrl": "/assets/sOmEaSsET",
        },
      }
    }
    isLibrary={false}
    learningContextId="course+org+run"
    lmsEndpointUrl="sOmEvaLue.cOm"
    onChange={[Function]}
    studioEndpointUrl="sOmEoThERvaLue.cOm"
    updateContent={[Function]}
  />
</[object Object]>
`;

exports[`TinyMceWidget snapshots renders as expected with default behavior 1`] = `undefined`;
